<?xml version="1.0"?>
<package>
  <name>kulbabu_gazebo</name>
  <version>0.0.1</version>
  <description>The kulbabu_gazebo package</description>

  <maintainer email="mr-yellow@mr-yellow.com">Mr-Yellow</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/kulbu/kulbabu_gazebo</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>

  <run_depend>gazebo_ros</run_depend>
  <run_depend>xacro_common</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
